--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,10 @@ h1, h2, h3, h4, h5, .serif-font{
 }
 
 /* MusicPlayerCSS */
-i#playPauseSong, i#restartSong {
+i#playPauseSong, i#restartSong, i#closePlayer {
   cursor: pointer;
 }
-i#playPauseSong:hover, i#restartSong:hover {
+i#playPauseSong:hover, i#restartSong:hover, i#closePlayer:hover {
   color: #ddd;
   text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
             }
