--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
-  font-style: normal;
 }
 h1, h2, h3, h4, h5, .serif-font{
   font-family: "EB Garamond", serif;
@@ -115,3 +114,7 @@ i#playPauseSong:hover, i#restartSong:hover, i#closePlayer:hover {
       vertical-align: middle;
     }
     .material-icons:hover {text-shadow: 0px 0px 5px grey;}
+
+    .hidden {
+      display: none;
+    }
